--- a/Practice/Spotify Clone/index.html
+++ b/Practice/Spotify Clone/index.html
@@ -37,15 +37,109 @@
                 </div>
                 <div class="lib-box">
                     <div class="box">
-                        <div class="box-p1">Create your first playlist</div>
-                        <div class="box-p2">It's easy, we'll help you</div>
+                        <p class="box-p1">Create your first playlist</p>
+                        <p class="box-p2">It's easy, we'll help you</p>
                         <button class="badges">Create playlist</button>
+                    </div>
+                    <div class="box">
+                        <p class="box-p1">Let's find some podcasts to folow</p>
+                        <p class="box-p2">We'll keep you upload on new episodes</p>
+                        <button class="badges">Browse podcasts</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="main-content">Main Content</div>
-        <div class="music-player">Music</div>
+        <div class="main-content">
+            <div class="sticky-nav">
+                <div class="sticky-nav-icons">
+                    <i class="fa-solid fa-angle-left"></i>
+                    <i class="fa-solid fa-angle-right hide"></i>
+                </div>
+                <div class="sticky-nav-options">
+                    <button class="badges nav-item hide">Explore Premium</button>
+                    <button class="badges nav-item dark-badge"><i class="fa-regular fa-circle-down" style="margin-right: 5px;"></i>Install App</button>
+                    <i class="fa-regular fa-user nav-item"></i>
+                </div>
+            </div>
+
+            <h2>Recently played</h2>
+            <div class="cards-container">
+                <div class="cards">
+                    <img src="./assets/card1img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Your daily updates of the most played...</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card6img.jpeg" class="card-img">
+                    <p class="card-title">Top Songs - India</p>
+                    <p class="card-info">Your weekly updates of the most played...</p>
+                </div>
+            </div>
+            <h2>Trending now near you</h2>
+            <div class="cards-container">
+                <div class="cards">
+                    <img src="./assets/card2img.jpeg" class="card-img">
+                    <p class="card-title">Tumse Behtar (From "Sunny Sanskari Ki Tulsi Kumari")</p>
+                    <p class="card-info">Arijit Singh, Tanishk Bagchi, Manoj Muntashir</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card3img.jpeg" class="card-img">
+                    <p class="card-title">Kiya Kiya</p>
+                    <p class="card-info">Anand Raj Anand, Shweta Pandit</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card4img.jpeg" class="card-img">
+                    <p class="card-title">Paan Ki Dukaan</p>
+                    <p class="card-info">Vishal Bhardwaj, Sukhwinder Singh, Rekha Bhardwaj</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card7img.jpeg" class="card-img">
+                    <p class="card-title">DOPAMINE</p>
+                    <p class="card-info">Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card8img.jpeg" class="card-img">
+                    <p class="card-title">Main Hoon (From "Battle of Galwan")</p>
+                    <p class="card-info">Ayaan Lall, Shreya Ghoshal, Shabbir Ahmed</p>
+                </div>
+            </div>
+            <h2>Featured Charts</h2>
+            <div class="cards-container">
+                <div class="cards">
+                    <img src="./assets/card5img.jpeg" class="card-img">
+                    <p class="card-title">Top Songs- Global</p>
+                    <p class="card-info">Your weekly updates of the most played...</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card6img.jpeg" class="card-img">
+                    <p class="card-title">Top Songs - India</p>
+                    <p class="card-info">Your weekly updates of the most played...</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card1img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Your daily updates of the most played...</p>
+                </div>
+                <div class="cards">
+                    <img src="./assets/card7img.jpg" class="card-img">
+                    <p class="card-title">Top 50 - India</p>
+                    <p class="card-info">Your daily updates of the most played...</p>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="line"></div>
+            </div>
+        </div>
+        
+        <div class="music-player">
+            <div class="albums"></div>
+            <div class="players">
+
+            </div>
+            <div class="control">
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
