--- a/Practice/Spotify Clone/index.html
+++ b/Practice/Spotify Clone/index.html
@@ -47,6 +47,25 @@
                         <button class="badges">Browse podcasts</button>
                     </div>
                 </div>
+                <div class="left-sidebar">
+                    <div class="left-sidebar-option1">
+                        <div>
+                            <p>Legal</p>
+                        </div>
+                        <div>
+                            <p>Safety & Privacy Center</p>
+                        </div>
+                        <div>
+                            <p>Privacy Policy</p>
+                        </div>
+                    </div>
+                    <div class="left-sidebar-option2">
+                        <div>Cookies</div>
+                    </div>
+                    <div>
+                            <button class="left-sidebar-btn "><i class="fa-solid fa-globe"></i>English</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="main-content">
@@ -132,13 +151,42 @@
         </div>
         
         <div class="music-player">
-            <div class="albums"></div>
+            <div class="albums">
+                <div class="albums-img">
+                    <img src="./Homework Assets/album_picture.jpeg">
+                </div>
+                <div class="albums-par">
+                    <p class="par1">Daylight</p>
+                    <p class="par2">David Kushner</p>
+                </div>
+                <div class="albums-icons">
+                    <img src="./Homework Assets/album_icon1.png">
+                    <img src="./Homework Assets/album_icon2.png">
+                </div>
+            </div>
             <div class="players">
-
+                <div class="player-controls">
+                    <img src="./assets/player_icon1.png" class="player-control-icon">
+                    <img src="./assets/player_icon2.png" class="player-control-icon">
+                    <img src="./assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
+                    <img src="./assets/player_icon4.png" class="player-control-icon">
+                    <img src="./assets/player_icon5.png" class="player-control-icon">
+                </div>
+                <div class="playback-bar">
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar" step="1">
+                    <span class="tot-time">03:43</span>
+                </div>
             </div>
             <div class="control">
-                
+                <img src="./Homework Assets/controls_icon1.png" class="control-icon">
+                <img src="./Homework Assets/controls_icon2.png" class="control-icon">
+                <img src="./Homework Assets/controls_icon3.png" class="control-icon">
+                <img src="./Homework Assets/controls_icon4.png" class="control-icon">
+                <img src="./Homework Assets/controls_icon5.png" class="control-icon">
+                <input type="range" min="0" max="100" class="control-bar" step="1">
             </div>
+
         </div>
     </div>
 </body>
